<resources>
    <string name="Gallery">گالری</string>
    <string name="IOExceptionNotice">مشکلی در نوشتن فایل در حافظه دستگاه به وجود آمد. لطفا از صحت عملکرد کارت حافظه خود و همچنین داشتن فضای خالی اطمینان حاصل کنید. در صورتی که مشکل ادامه داشت درخواست راهنمایی نمایید.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutNazdika">درباره نزدیکا</string>
    <string name="about_me">درباره من</string>
    <string name="about_page">درباره پیج</string>
    <string name="abuse">سو‌ءاستفاده</string>
    <string name="abuseNotice">سو استفاده از هویت دیگران در نزدیکا ممنوعه. اگر فردی از هویتت سو استفاده کرده، وارد پروفایلش شو و با زدن دکمه‌ی سه نقطه بالای صفحه اون فرد رو گزارش کن. این گزارش‌ها توسط تیم پشتیبانی بررسی می‌شه و حساب کاربری یا پیج فرد متخلف به تشخیص پشتیبانی نزدیکا حذف می‌شه.</string>
    <string name="accept">تایید</string>
    <string name="acceptAndcontinue">تایید و ادامه</string>
    <string name="acceptFriendRequest">تایید درخواست دوستی</string>
    <string name="acceptFriendRequestLimitNotice">در هر شبانه روز فقط میتونی 50 درخواست دوستی رو قبول کنی.</string>
    <string name="acceptedFollow">درخواست فالو شما را پذیرفت.</string>
    <string name="acceptedFriend">درخواست دوستیت رو قبول کرد، حالا می‌تونی باهاش چت کنی</string>
    <string name="account">حساب</string>
    <string name="accountSettings">حساب کاربری</string>
    <string name="account_suggestions_based_on_location">آدم‌ها و پیج‌های پیشنهادی بر اساس موقعیت مکانیت تغییر کردن</string>
    <string name="action_settings">Settings</string>
    <string name="active">فعال</string>
    <string name="activeSessions">دستگاه‌های فعال</string>
    <string name="add">افزودن</string>
    <string name="addAComment">نظرت رو بنویس</string>
    <string name="addAsAdmin">افزودن به عنوان مدیر</string>
    <string name="addBio">شرح حال …</string>
    <string name="addFirstComment">اولین نظر رو بده...</string>
    <string name="addPageBio">درباره پیج …</string>
    <string name="addSomeFriendsForStart">برای شروع چند تا دوست جدید پیدا کن</string>
    <string name="addUserAsAdminConfirmation">مطمئنی می‌خوای %s رو به مدیران گروه اضافه کنی؟</string>
    <string name="addUserToAdmins">افزودن کاربر به عنوان مدیر</string>
    <string name="add_image">افزودن تصویر</string>
    <string name="add_image_page">افزودن تصویر پیج</string>
    <string name="add_interests">افزودن علاقه‌مندی‌ها</string>
    <string name="addedToFriends">به لیست دوستانت اضافه شد</string>
    <string name="admin">مدیر</string>
    <string name="adminBan">بن ادمینی کاربر</string>
    <string name="adminSuperBan">سوپر بن ادمینی کاربر</string>
    <string name="adminSuspend">معلق کردن کاربر</string>
    <string name="advertisement">آگهی</string>
    <string name="after1hour">بعد از ۱ ساعت</string>
    <string name="after1min">بعد از ۱ دقیقه</string>
    <string name="after30min">بعد از ۳۰ دقیقه</string>
    <string name="after5min">بعد از ۵ دقیقه</string>
    <string name="age">سن و سال</string>
    <string name="age_comma">ساله،</string>
    <string name="ago">پیش</string>
    <string name="all">همه</string>
    <string name="allItems">تمام آیتم ها</string>
    <string name="allSessionsTerminated">خروج از حساب در تمامی دستگاه‌های دیگر با موفقیت انجام شد</string>
    <string name="alreadyLiked">قبلا لایکش کردی</string>
    <string name="always">همیشه</string>
    <string name="analytics_only_en">Analytics Only</string>
    <string name="and">و</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonymous">حالت ناشناس</string>
    <string name="anonymous_off_notice">الان حالت ناشناس غیر فعاله و کسانی که شماره‌ا‌ت رو دارند تو رو در این قسمت می‌ببینند.</string>
    <string name="anonymous_off_switch_notice_1">"با غیرفعال کردن حالت ناشناس می‌تونی مخاطبانت رو ببینی. در این صورت کسانی که شمارت رو دارند هم می‌تونن شما رو در این قسمت ببینند. بعدا می‌تونی مجددا حسابت رو ناشناس کنی.

برای اطلاعات بیشتر"</string>
    <string name="anonymous_off_switch_notice_2">کن.</string>
    <string name="anonymous_on_notice">الان در حالت ناشناس هستی. و کسانی که شماره‌ات رو دارند در این قسمت نمی‌بیننت.</string>
    <string name="anonymous_on_switch_notice">"مطمئنی می‌خوای ناشناس بشی؟ 
با حساب ناشناس نمی‌تونی مخاطبانت رو ببینی."</string>
    <string name="app_name">Nazdika</string>
    <string name="app_name_fa">نزدیکا</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="areYouSure">آیا اطمینان دارید؟</string>
    <string name="areYouSureDeleteMessage">مطمئنی می‌خوای پیامی که انتخاب کردی رو حذف کنی؟</string>
    <string name="areYouSureToRemoveThisPicture">مطمئنی می‌خوای این تصویر رو حذف کنی؟</string>
    <string name="ask_later">بعدا بپرس</string>
    <string name="authBackNotice">هنوز ثبت‌نامت کامل نشده، مطمئنی می‌خوای خارج بشی؟</string>
    <string name="authPhoneEnterTitle">برای ورود، شماره موبایلت رو وارد کن</string>
    <string name="authPhoneVerifyTitle">کد فعال‌سازی رو وارد کن</string>
    <string name="authorize">اجازه بده</string>
    <string name="autoLockDescription">بعد از این بازه زمانی، نزدیکا به طور خودکار قفل می‌شه و برای باز شدن باید رمز عبوری که تعیین کردی رو وارد کنی.</string>
    <string name="autoLockTitle">قفل خودکار</string>
    <string name="autoPlayVideos">پخش خودکار ویدئوها</string>
    <string name="avatarRemoved">عکس آواتار حذف شد.</string>
    <string name="back">بازگشت</string>
    <string name="banCondition">می‌خوام بدونم تحت چه شرایطی ممکنه حساب شخصی یا پیجم مسدود بشه</string>
    <string name="banConditionDescription">اگه محتوایی (تصویر، ویدیو، متن، نظرات، پیام و …) با موضوعاتی خلاف قوانین جمهوری اسلامی منتشر کرده باشی و یا ناهنجاری اخلاقی داشته باشه، حساب یا پیجت مسدود می‌شه و دیگه نمی‌تونی در نزدیکا فعالیت کنی. پس لطفا خودت حواست به محتوایی که در نزدیکا منتشر می‌کنی باشه که شرمنده ات نشیم.</string>
    <string name="banConditionOnBuy">من تازه از نزدیکا خرید کردم ولی حساب شخصی یا پیجم مسدود شده</string>
    <string name="banned">مسدود</string>
    <string name="bazaaarpay_change_account_title">تغییر حساب کاربری در بازارپی</string>
    <string name="bazaarpay_accept_postpaid_terms">قبول قوانین</string>
    <string name="bazaarpay_bank_list_header_1">کارت بانک شما باید متعلق به یکی از بانک‌های زیر باشد.</string>
    <string name="bazaarpay_bank_list_header_2">لازم است شماره تلفن ثبت شده در حساب بانک و حساب شما یکسان باشد.</string>
    <string name="bazaarpay_cancel">انصراف</string>
    <string name="bazaarpay_change_account">تغییر حساب کاربری</string>
    <string name="bazaarpay_commit">باشه</string>
    <string name="bazaarpay_commit_with_countdown">باشه (%d)</string>
    <string name="bazaarpay_complete_payment">تکمیل خرید</string>
    <string name="bazaarpay_credit_pay">پرداخت با‌ ‌اعتبار</string>
    <string name="bazaarpay_data_not_found">نتیجه‌ای یافت نشد.</string>
    <string name="bazaarpay_dd_auto_renew">تمدید خودکار اشتراک</string>
    <string name="bazaarpay_dd_auto_renew_dsc">با فعال‌سازی پرداخت مستقیم اشتراک شما در سرویس‌های مختلف بدون نیاز به اقدام شما به صورت خودکار تمدید می‌شود.</string>
    <string name="bazaarpay_header_select_bank_title">بانک خود را انتخاب کنید.</string>
    <string name="beforeStartingRadar">قبل از اینکه بریم تو رادار …</string>
    <string name="birthdayTermsTitle">چرا نزدیکا تاریخ تولدمو میخواد؟</string>
    <string name="cancel">انصراف</string>
    <string name="currentDevice">دستگاه فعلی</string>
    <string name="deletePmForOther">پیام برای طرف مقابل هم حذف بشه</string>
    <string name="desc1_privacy_policy">نزدیکا برای سرویس‌دهی به شما، اطلاعاتی رو به صورت مستقیم ازت دریافت می‌کنه. هنگام ثبت نام در نزدیکا باید نام، شماره موبایل و جنسیت خودت رو در اختیار سیستم قرار بدی و برای امنیت بیشتر و یا بازیابی حساب کاربریت روی دستگاه‌های دیگر، می‌تونی آدرس پست الکترونیکت رو در نزدیکا ثبت کنی.</string>
    <string name="desc_privacy_policy">"
 به نزدیکا خوش اومدی 

نزدیکا برای ارائه سرویس‌دهی و رقم زدن تجربه‌ای لذت بخش برای شما، اطلاعاتی رو ازت دریافت می‌کنه.
با در نظر گرفتن حقوقت، و همینطور ایجاد فضایی امن و بر مبنای اطمینان، لازمه از شیوه‌ها و چرخه‌ی استفاده از این اطلاعات آگاه باشی. 
در این سند از واژه دستگاه به جای موبایل، تبلت و دیگر دستگاه‌های الکترونیک قابل حمل که قابلیت استفاده از اپلیکیشن نزدیکا رو دارند استفاده شده."</string>
    <string name="dontHaveProfilePicture">تصویر پروفایل نداری!</string>
    <string name="emptySessions">شما در دستگاه دیگری با این حساب وارد نشده اید</string>
    <string name="genderCantBeCanged">بعدا قابل تغییر نیست. با دقت انتخاب کن.</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="logoutAllSessions">خروج از همه دستگاه‌های دیگر</string>
    <string name="logoutNoticeDefault">مطمئنی میخوای خارج بشی؟</string>
    <string name="nearbyGenderCheckNote">جنسیت شما</string>
    <string name="nearbyImFemale">خانم هستم</string>
    <string name="nearbyImMale">آقا هستم</string>
    <string name="neutral">بعدا</string>
    <string name="ok">باشه</string>
    <string name="otherDevices">دستگاه‌های دیگر</string>
    <string name="otherTime">بعدا</string>
    <string name="passwordDefinition">تعیین رمز عبور</string>
    <string name="passwordDefinitionDesc">برای اﯾﻨﮑﻪ بتونی راﺣﺖ‌ﺗﺮ وارد نزدیکا بشی، برای حساب کاربریت رمز عبور تعیین کن.</string>
    <string name="radarDisabledNote2">برای استفاده از این بخش باید پیام‌رسانی شما بر روی «همه» تنظیم شده باشد.</string>
    <string name="radarSearchAgain">@string/tryAgain</string>
    <string name="setProfilePicture">انتخاب تصویر پروفایل</string>
    <string name="setProfilePictureDesc">"تو رادار همه تصویر پروفایل دارن
برای ادامه یک تصویر پروفایل انتخاب کن."</string>
    <string name="start">شروع</string>
    <string name="startRadar">ببین کیا آنلاینن!</string>
    <string name="subtitle1_privacy_policy">اطلاعاتی که نزدیکا ازت می‌گیره</string>
    <string name="there_is_no_people_around_you">در حال حاضر فرد دیگه‌ای اطرافت نیست</string>
    <string name="title">تیتر</string>
    <string name="title_privacy_policy">سیاست‌های حفظ حریم شخصی در نزدیکا</string>
    <string name="try_again_later_please">لطفا بعد از مدتی دوباره تلاش کن</string>
    <string name="whenIsYourBirthday">تاریخ تولدت رو وارد کن!</string>
</resources>