<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/layerThreeBg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView android:layout_marginTop="@dimen/margin_top_first_title_privacy_policy" android:text="@string/title_privacy_policy" style="@style/TitlePrivacyPolicyStyle" />
    <androidx.appcompat.widget.AppCompatTextView android:text="@string/desc_privacy_policy" style="@style/DescriptionPrivacyPolicyStyle" />
    <androidx.appcompat.widget.AppCompatTextView android:text="@string/subtitle1_privacy_policy" style="@style/TitlePrivacyPolicyStyle" />
    <androidx.appcompat.widget.AppCompatTextView android:text="@string/desc1_privacy_policy" style="@style/DescriptionPrivacyPolicyStyle" />
</LinearLayout>