<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:background="@color/surfaceBg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="vertical" android:id="@id/radarDisabledLayout" android:background="@color/surfaceBg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
        <TextView android:id="@id/radarDisabledMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin" android:layout_marginRight="@dimen/margin" android:text="@string/radarDisabledNote2" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/EmptyViewTextStyle" />
        <com.nazdika.app.view.InlineSetting android:id="@id/prefSV" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/startRadarLayout" android:padding="@dimen/margin" android:visibility="visible" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/textSizeNormal" android:textColor="@color/primaryText" android:id="@id/startRadarDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/startRadar" />
        <androidx.appcompat.widget.AppCompatButton android:id="@id/startRadar" android:layout_width="150.0dip" android:layout_marginTop="@dimen/marginDouble" android:text="@string/start" style="@style/PrimaryButton.Medium" />
    </LinearLayout>
    <RelativeLayout android:id="@id/setBirthdayLayout" android:background="@color/surfaceBg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/birthdayTerms">
            <TextView android:textSize="@dimen/textSizeNormal" android:textColor="@color/tertiaryText" android:gravity="center" android:id="@id/beforeStartingRadar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin" android:layout_marginBottom="@dimen/margin" android:text="@string/beforeStartingRadar" />
            <TextView android:textSize="@dimen/textSizeLarge" android:textColor="@color/primaryText" android:gravity="center" android:id="@id/birthdayTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whenIsYourBirthday" android:fontFamily="@font/iran_sans_medium" />
            <ir.hamsaa.PersianDatePicker android:id="@id/birthdayDatePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/marginDouble" android:layout_marginBottom="@dimen/marginDouble" />
            <Button android:id="@id/setBirthday" android:layout_width="150.0dip" android:text="@string/accept" style="@style/PrimaryButton.Medium" />
        </LinearLayout>
        <TextView android:textColor="@color/primary" android:gravity="center" android:id="@id/birthdayTerms" android:background="@drawable/button_background" android:paddingLeft="@dimen/margin" android:paddingTop="@dimen/marginDouble" android:paddingRight="@dimen/margin" android:paddingBottom="@dimen/marginDouble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/birthdayTermsTitle" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:fontFamily="@font/iran_sans_medium" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/genderCheckLayout" android:padding="@dimen/margin" android:visibility="gone" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:id="@id/chooseGenderTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/nearbyGenderCheckNote" style="@style/EmptyViewTextStyle" />
        <Button android:textColor="@color/onPrimaryText" android:id="@id/btnImMale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/marginDouble" android:minWidth="@dimen/wideButtonsMinWidth" android:text="@string/nearbyImMale" android:backgroundTint="@color/primary" style="@style/PrimaryButton" />
        <Button android:textColor="@color/onPrimaryText" android:id="@id/btnImFemale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/marginDouble" android:minWidth="@dimen/wideButtonsMinWidth" android:text="@string/nearbyImFemale" android:backgroundTint="@color/primary" style="@style/PrimaryButton" />
        <TextView android:textColor="@color/alert" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/genderCantBeCanged" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/setProfilePictureLayout" android:padding="@dimen/margin" android:visibility="gone" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:layout_width="90.0dip" android:layout_height="90.0dip" android:layout_marginBottom="@dimen/marginDouble" app:srcCompat="@drawable/ill_profile" app:tint="@color/secondaryIcon" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/textSizeLarge" android:textColor="@color/primaryText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dontHaveProfilePicture" android:fontFamily="@font/iran_sans_medium" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/textSizeNormal" android:textColor="@color/primaryText" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin" android:layout_marginTop="@dimen/margin" android:layout_marginRight="@dimen/margin" android:layout_marginBottom="@dimen/marginDouble" android:text="@string/setProfilePictureDesc" android:fontFamily="@font/iran_sans_light" />
        <androidx.appcompat.widget.AppCompatButton android:id="@id/btnSetPicture" android:layout_width="150.0dip" android:layout_marginBottom="@dimen/marginDouble" android:text="@string/setProfilePicture" style="@style/PrimaryButton.Medium" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/emptyView" android:padding="@dimen/margin" android:visibility="gone" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <androidx.appcompat.widget.AppCompatImageView android:layout_width="90.0dip" android:layout_height="90.0dip" android:layout_marginBottom="@dimen/marginDouble" app:srcCompat="@drawable/ic_ill_people" app:tint="@color/secondaryIcon" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/textSizeLarge" android:textColor="@color/primaryText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/there_is_no_people_around_you" android:fontFamily="@font/iran_sans_medium" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/textSizeNormal" android:textColor="@color/primaryText" android:gravity="center" android:id="@id/emptyViewText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin" android:layout_marginTop="@dimen/margin" android:layout_marginRight="@dimen/margin" android:layout_marginBottom="@dimen/marginDouble" android:text="@string/try_again_later_please" android:fontFamily="@font/iran_sans_light" />
        <com.nazdika.app.view.SubmitButtonView android:id="@id/retry" android:layout_width="150.0dip" android:layout_marginBottom="@dimen/marginDouble" android:text="@string/radarSearchAgain" style="@style/PrimaryButton.Medium" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/pulsatorRoot" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true">
        <com.nazdika.app.view.PulsatorLayout android:id="@id/pulsator" android:paddingTop="@dimen/actionBarHeight" android:layout_width="@dimen/pulsatorSize" android:layout_height="@dimen/pulsatorSize" android:layout_marginBottom="10.0dip" app:pulse_color="@color/primary" app:pulse_count="2" app:pulse_duration="3600" app:pulse_repeat="0" />
        <TextView android:textSize="@dimen/textSizeLarge" android:textColor="@color/primaryText" android:gravity="center" android:id="@id/notice" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@id/yaldaOffer" android:background="@color/blue" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center|right" android:id="@id/hideYaldaOffer" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_cross" android:scaleX="0.5" android:scaleY="0.5" app:tint="@color/cancelIcon" />
            <TextView android:textColor="@color/primaryText" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="٪۵۰ تخفیف ویژه یلدا" />
        </FrameLayout>
        <com.nazdika.app.ui.RadarRecyclerView android:layout_gravity="center" android:id="@id/list" android:paddingRight="8.0dip" android:clipToPadding="false" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>