<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/surfaceBg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="right" android:orientation="vertical" android:background="@color/surfaceBg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="2.0dip">
        <TextView android:textColor="@color/blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/currentDevice" />
        <include android:id="@id/currentSession" layout="@layout/item_app_session" />
        <TextView android:textColor="@color/alert" android:id="@id/terminate" android:background="@drawable/item_card_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/logoutAllSessions" />
    </LinearLayout>
    <TextView android:textColor="@color/blue" android:gravity="right" android:id="@id/otherDevices" android:background="@color/surfaceBg" android:paddingLeft="16.0dip" android:paddingTop="10.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/otherDevices" />
    <TextView android:textColor="@color/secondaryText" android:gravity="center" android:id="@id/empty" android:padding="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/emptySessions" />
</LinearLayout>