<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bazaarpay_default_margin_double" android:layout_marginTop="@dimen/bazaarpay_default_margin" android:layout_marginRight="@dimen/bazaarpay_default_margin_double"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/bazaarpay_text_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bazaarpay_bank_list_header_1" style="@style/Bazaar.Text.Caption" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/bazaarpay_text_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bazaarpay_default_margin_half" android:text="@string/bazaarpay_bank_list_header_2" style="@style/Bazaar.Text.Caption" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/bazaarpay_text_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bazaarpay_default_margin" android:text="@string/bazaarpay_header_select_bank_title" style="@style/Bazaar.Text.Subtitle2" />
</LinearLayout>