<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/layerThreeBg" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/border" android:background="@color/primary" android:layout_width="fill_parent" android:layout_height="8.0dip" />
    <LinearLayout android:id="@id/titleLayout" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/border">
        <TextView android:textSize="@dimen/textSizeLarge" android:textColor="@color/primaryText" android:id="@id/title" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title" />
    </LinearLayout>
    <LinearLayout android:id="@id/messageLayout" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/titleLayout">
        <TextView android:textSize="@dimen/textSizeNormal" android:textColor="@color/primaryText" android:id="@id/message" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/areYouSure" android:lineSpacingMultiplier="1.3" />
    </LinearLayout>
    <LinearLayout android:gravity="center|right" android:id="@id/checkBoxLayout" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_below="@id/messageLayout" android:layout_alignParentRight="true">
        <TextView android:textSize="@dimen/textSizeSmall" android:textColor="@color/primaryText" android:id="@id/checkBoxMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/deletePmForOther" android:lineSpacingMultiplier="1.3" />
        <org.telegram.ui.Components.CheckBoxSquare android:id="@id/checkBox" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_marginLeft="10.0dip" />
    </LinearLayout>
    <RelativeLayout android:id="@id/buttonsLayout" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_below="@id/checkBoxLayout">
        <Button android:textSize="@dimen/textSizeNormal" android:textColor="@color/primary" android:id="@id/btnYes" android:background="@color/transparent" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="50.0dip" android:text="@string/accept" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignWithParentIfMissing="true" />
        <Button android:textSize="@dimen/textSizeNormal" android:textColor="@color/secondaryText" android:id="@id/btnNo" android:background="@color/transparent" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:minWidth="50.0dip" android:text="@string/cancel" android:layout_toLeftOf="@id/btnYes" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" />
        <Button android:textSize="@dimen/textSizeNormal" android:textColor="@color/secondaryText" android:id="@id/btnNeutral" android:background="@color/transparent" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="50.0dip" android:text="@string/neutral" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" />
        <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <Button android:textColor="@color/onPrimaryText" android:id="@id/bigActionButton" android:background="@drawable/btn_background_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:minWidth="@dimen/margin_160" android:text="@string/ok" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <Button android:textColor="@color/primary" android:id="@id/bigActionCancelButton" android:background="@drawable/btn_background_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:minWidth="@dimen/margin_160" android:text="@string/cancel" android:layout_below="@id/bigActionButton" android:layout_centerInParent="true" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>