<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/surfaceBg" android:paddingBottom="@dimen/authContainerBottomMargin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.nazdika.app.ui.NazdikaActionBar android:id="@id/nazdikaActionBar" android:layout_width="fill_parent" android:layout_height="@dimen/actionBarHeightBig" app:nab_mode="nazdika_logo" />
    <TextView android:textSize="@dimen/textSizeLarge" android:textColor="@color/primaryText" android:id="@id/notice" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logoutNoticeDefault" android:layout_centerInParent="true" />
    <Button android:textSize="@dimen/textSizeLarge" android:textColor="@color/onPrimaryText" android:id="@id/btnLogout" android:background="@drawable/btn_background_primary" android:paddingLeft="@dimen/margin_12" android:paddingRight="@dimen/margin_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/logout" android:layout_below="@id/notice" android:layout_centerHorizontal="true" />
    <Button android:textSize="@dimen/textSizeLarge" android:textColor="@color/primary" android:id="@id/btnCancel" android:background="@drawable/btn_background_secondary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/cancel" android:layout_below="@id/btnLogout" android:layout_alignStart="@id/btnLogout" android:layout_alignEnd="@id/btnLogout" />
</RelativeLayout>